--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "unit-test": "cd project && npm run test-ci",
     "ci-integration-tests": "cd integration-tests && npm ci && npm run build",
     "integration-test": "cd integration-tests && npm run test-ci",
+    "build-and-run-integration": "npm run pack && npm run ci-integration-tests && npm run integration-test",
     "lint-test": "cd integration-tests && npm run lint",
     "release": "npm run copy-readme && cd project && npm run release",
     "copy-readme": "node ./scripts/copy-readme.js"
